--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -19,23 +19,23 @@ services:
       - db
     restart: always
     volumes:
-      - static:/app/static/
+      - static:/static
       - media:/app/media/
 
   frontend:
     container_name: foodgram-front
     env_file: .env
     image: zoromax/foodgram_gateway:latest
+    command: cp -r /app/build/. /static/
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/static
 
   nginx:
     container_name: foodgram-proxy
     image: zoromax/foodgram_gateway:latest
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/:/usr/share/nginx/html/redoc/
       - static:/static
       - media:/media
     ports:
