--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,29 +13,30 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   backend:
+    container_name: foodgram-backend
     build: ../backend/
     env_file: .env
     depends_on:
       - db
     restart: always
     volumes:
-      - static:/app/static/
+      - static:/static
       - media:/app/media/
 
   frontend:
     container_name: foodgram-front
     env_file: .env
     build: ../frontend
+    command: cp -r /app/build/. /static/
     volumes:
-      - ../frontend/:/app/result_build/
+      - static:/static
 
   nginx:
     container_name: foodgram-proxy
     build: .
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../docs/:/usr/share/nginx/html/redoc/
       - static:/static
       - media:/media
     ports:
