--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,6 +8,7 @@ volumes:
 services:
   db:
     image: postgres:13
+    restart: always
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
@@ -21,6 +22,8 @@ services:
     volumes:
       - static:/static
       - media:/app/media/
+    ports:
+      - '8000:8000'
 
   frontend:
     container_name: foodgram-front
@@ -39,7 +42,7 @@ services:
       - static:/static
       - media:/media
     ports:
-      - 80:80
+      - '80:80'
     depends_on:
       - backend
       - frontend
