--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,6 +8,7 @@ volumes:
 services:
   db:
     image: postgres:13
+    restart: on-failure
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
@@ -22,6 +23,8 @@ services:
     volumes:
       - static:/static
       - media:/app/media/
+    ports:
+      - '8000:8000'
 
   frontend:
     container_name: foodgram-front
@@ -40,7 +43,7 @@ services:
       - static:/static
       - media:/media
     ports:
-      - 80:80
+      - '80:80'
     depends_on:
       - backend
       - frontend
