--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,12 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --upgrade pip && \
-    pip install -r requirements.txt --no-cache-dir --default-timeout=100
+RUN pip install --upgrade pip \
+     && pip install -r requirements.txt --no-cache-dir --default-timeout=100
 
 COPY . .
 
- CMD ["sh", "-c", "python manage.py makemigrations && \
-                    python manage.py migrate && \
-                    python manage.py load_ingredients && \
-                    gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py makemigrations \
+                   && python manage.py migrate \
+                   && python manage.py load_ingredients \
+                   && gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000"]
